--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,12 +1,20 @@
-
-.mainContainer {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: Arial, sans-serif;
+body {
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
+    background: #FFFFFF;
 }
 
-h1 {
-  text-align: center;
-  color: #333;
+h1,
+h2,
+h3,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
